# ws_rmrobot

./: .gitignore  command.md  config.json  readme.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/rm_65_6f_description/: .catkin  .rosinstall
devel/.private/rm_65_6f_moveit_config/: .catkin  setup.sh
devel/.private/rm_65_demo/: .catkin  local_setup.sh
devel/.private/rm_65_description/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/rm_65_moveit_config/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/rm_65_robot/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/rm_bringup/: .catkin  local_setup.sh  setup.sh
devel/.private/rm_control/: .catkin  setup.sh
devel/.private/rm_driver/: .catkin  local_setup.sh
devel/.private/rm_gazebo/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/.private/rm_msgs/: .catkin  .rosinstall
devel/include/rm_msgs/: ArmState.h  Arm_Analog_Output.h  Arm_Current_State.h  Arm_Digital_Output.h  Arm_IO_State.h  Arm_Joint_Speed_Max.h  Cabinet.h  CartePos.h  ChangeTool_Name.h  ChangeTool_State.h  ChangeWorkFrame_Name.h  ChangeWorkFrame_State.h  Force_Position_Move_Joint.h  Force_Position_Move_Pose.h  Force_Position_State.h  GetArmState_Command.h  Gripper_Pick.h  Gripper_Set.h  Hand_Angle.h  Hand_Force.h  Hand_Posture.h  Hand_Seq.h  Hand_Speed.h  IO_Update.h  JointPos.h  Joint_Current.h  Joint_Enable.h  Joint_Error_Code.h  Joint_Max_Speed.h  Joint_Step.h  Joint_Teach.h  LiftState.h  Lift_Height.h  Lift_Speed.h  Manual_Set_Force_Pose.h  MoveC.h  MoveJ.h  MoveJ_P.h  MoveL.h  Ort_Teach.h  (+15 more)
devel/lib/pkgconfig/: catkin_tools_prebuild.pc  rm_65_6f_description.pc  rm_65_6f_moveit_config.pc  rm_65_demo.pc  rm_65_description.pc  rm_65_moveit_config.pc  rm_bringup.pc  rm_control.pc  rm_driver.pc  rm_gazebo.pc  rm_msgs.pc
devel/lib/rm_65_demo/: api_ChangeToolName_demo  api_ChangeWorkFrame_demo  api_Get_Arm_State_demo  (+8 more)
src/rm_robot/rm_65_demo/: CMakeLists.txt
src/rm_robot/rm_65_demo/scripts/: armControl.py  camera.py  hand.py  main.py  main.py.bak  test.py  util.py  util.py.bak  util_old.py.bak  voice.py
src/rm_robot/rm_65_demo/src/: api_Get_Arm_State_demo.cpp  api_moveJ_P_demo.cpp
(+421 files in other folders)
